[project]
name = "qwen3-vl-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.118.0",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers==4.57.0",
    "uvicorn>=0.37.0",
]
